2014-07-03  Andreas Büsching  <crunchy@bitkipper.net>

	* notifier/version.py: set version to 0.9.6

	* apply patch from Jascha Geerds <geerds@univention.de>: Fix an
	erroneous handling with command output. In certain cases this
	could lead to the loss of some output data.

	* apply patches from Philipp Hahn <hahn@univention.de>: some
	little cleanup which I collected while debugging a UMC-UVMM
	problem

	* apply patches from SpaceOne <space@wechall.net>: code cleanup;
	remove unneeded globals; fix check for None (== None → is None)
	fix stopping of loop when timer returns falsy value
	fix typo in example script
	
2012-03-31  Andreas Büsching  <crunchy@bitkipper.net>

	* notifier/version.py: set version to 0.9.5

	* examples/test-qt-cli.py: add new test for the QT notifier without a GUI

	* examples/test-qt.py: cleanup QT test

	* examples/threads3.py: add new thread example demonstrating the decorator

	* notifier/nf_qt.py (socket_add, socket_remove): add support for
	write and exception notifications
	(socket_add): ensure that sockets do not get registered more than
	once for the same condition

	* examples/log.py: extend/update example for logging API

	* notifier/log.py (open): add function to (re)open the default
	handlers for logging or optionally open custom handlers

2012-03-23  Andreas Büsching  <crunchy@bitkipper.net>

	* notifier/version.py: set version to 0.9.4

	* notifier/threads.py: fixed typo in import

2012-03-23  Andreas Büsching  <crunchy@bitkipper.net>

	* notifier/threads.py (Enhanced): new thread cass supporting thread-safe signals
	(threaded): a decorator that simplifies running a function as a thread

	* notifier/nf_generic.py (step): if there are no timers and socket
	events the loop sleeps for dispatch.MIN_TIMER that was passed to
	time.sleep without dividing by 1000. That caused a sleep for 1
	minute and 40 seconds instead of 100 milliseconds.

2011-10-23  Andreas Büsching  <crunchy@bitkipper.net>
